# scenario-forge

./: .coveragerc  .gitignore  AGENT_CONTEXT.md  AGENT_HANDOFF.md  CLAUDE.md  LICENSE  NEXT_SESSION.md.template  RC1_QA_CHECKLIST.md  RC1_READY.md  README.md  main.py  pyproject.toml  test_ollama.py
.github/workflows/: test.yml
docs/: ADDING_NEW_TARGETS.md  ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  MISSION_VISION.md  MODEL_FORGE_BOOTSTRAP.md  MVP_PLAN.md  RC1_CRITICAL_PATH.md  RC1_RELEASE_NOTES.md  README.md  SCENARIO_FORGE_CORE.md
docs/archive/: IMPLEMENTATION_PLAN.md  PROJECT_COHERENCE.md  VISION.md  VISION_FEEDBACK_LOOP.md
src/scenario_forge/: __init__.py  cli.py  core.py  datastore.py  examples.yaml
src/scenario_forge/backends/: __init__.py  ollama.py
tests/: README.md  __init__.py  conftest.py  test_cli_generate.py  test_cli_list_export.py  test_cli_review.py  test_cli_save.py  test_core.py  test_datastore.py  test_datastore_edge_cases.py  test_full_workflow.py  test_rating_system.py
